--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500&family=Press+Start+2P&family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <!--link to file of css  -->
-    <link rel="stylesheet" href="/mazen-canada-team/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="section-hero">
